# swig-gradle-plugin

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: push.yml  release.yml
gradle/: libs.versions.toml
plugin/: build.gradle.kts  settings.gradle.kts
plugin/api/: plugin.api
plugin/src/functionalTest/kotlin/com/redissi/swig/plugin/: SwigGradlePluginPluginFunctionalTest.kt
plugin/src/main/kotlin/com/redissi/swig/plugin/: GenerateCmakePreloadScriptTask.kt  GenerateJavaSwigWrapperTask.kt  GenerateSwigTask.kt  GenerateSwigWrapperTask.kt  SwigGradlePluginPlugin.kt  SwigPlugin.kt
plugin/src/main/kotlin/com/redissi/swig/plugin/extension/: JavaWrapper.kt  SwigConfig.kt  SwigExtension.kt
plugin/src/test/kotlin/com/redissi/swig/plugin/: SwigGradlePluginPluginTest.kt
sample/app/: build.gradle.kts
sample/app/src/main/: AndroidManifest.xml
sample/app/src/main/res/layout/: activity_main.xml
sample/app/src/main/res/values/: strings.xml  styles.xml
sample/lib/: build.gradle.kts
sample/lib-groovy/: build.gradle
sample/lib-groovy/src/main/: AndroidManifest.xml
sample/lib-groovy/src/main/cpp/: CMakeLists.txt  Employee.cpp  Person.cpp
sample/lib-groovy/src/main/cpp/include/: Employee.h  Person.h
sample/lib-groovy/src/main/swig/: SampleGroovy.i
sample/lib/src/main/: AndroidManifest.xml
sample/lib/src/main/cpp/: CMakeLists.txt  Company.cpp
sample/lib/src/main/cpp/include/: Company.h
sample/lib/src/main/swig/: Sample.i
swig-plugin/: build.gradle.kts  settings.gradle.kts
swig-plugin/api/: plugin.api  swig-plugin.api
swig-plugin/src/main/kotlin/com/redissi/swig/plugin/: GenerateCmakeConfigTask.kt  GenerateCmakePreloadScriptTask.kt  GenerateSwigWrapperTask.kt  JavaLanguageWrapper.kt  SwigExtension.kt  SwigPlugin.kt  TargetLanguageWrapper.kt
(+7 files in other folders)
